Styling changes and word tweaks | Fixorated word wrapping (for two lines at least) on printable modal

--- a/mystyle.css
+++ b/mystyle.css
@@ -144,8 +144,6 @@ margin-top: 1em;
    font-family: "IM Fell DW Pica", Serif;
    z-index: 2;
    font-size: 157%;
-   position: absolute;
-   top: .7em;
  }
 
 #loading {
